# WEB_SYNTH

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.org  WEB_SYNTH.code-workspace
.claude/: CLAUDE.md  plan-recluse-pulsar-synth-integration.md  plan.md  rd_dsp_integration.md  rd_dsp_integration_plan.md  settings.local.json
.claude/PULSAR_ACTIVITY_FLASH_PLAN/: HANDOFF_RD_DSP.md  HANDOFF_RECLUSE_UI.md  RD_DSP_plan.md  README.md  RECLUSE_UI_plan.md  WEB_SYNTH_plan.md
.claude/STOCHASTIC_LAYOUT_PLAN/: HANDOFF_RD_DSP.md  WEB_SYNTH_plan.md
.claude/WAVETABLE_DISPLAY_PLAN/: RD_DSP_plan.md  README.md  RECLUSE_UI_plan.md  WEB_SYNTH_plan.md
.claude/rd-pulsar-walkthrough/: rd-pulsar-walkthrough_plan.md
.theme/: rd_color_palette.csv  rd_refresh_ghostty_theme.py
CMAKE/: PULSAR_SOURCES.cmake  SINE_SOURCES.cmake  SYNTH_SOURCES.cmake
ENGINE/PULSAR/: CMakeLists.txt  pulsar.cpp
ENGINE/SINE/: CMakeLists.txt  sine.cpp
ENGINE/SYNTH/: CMakeLists.txt  synth.cpp
NOTES/: Create_Waveform_Plan.org  TODO.org
PUBLIC/: index.html  main.js  pulsar-worklet.js  pulsar.wasm  rd-pulsar.js  rd-synth.js  synth-worklet.js  synth.wasm
PUBLIC/RECLUSE_UI/assets/fonts/Recluse_Font_0.sfdir/: .notdef.glyph  _A.glyph  _A_E.glyph  _Aacute.glyph  _Acircumflex.glyph  _Adieresis.glyph  _Agrave.glyph  _Aring.glyph  _Atilde.glyph  _B.glyph  _C.glyph  _Ccedilla.glyph  _D.glyph  _Delta.glyph  _E.glyph  _Eacute.glyph  _Ecircumflex.glyph  _Edieresis.glyph  _Egrave.glyph  _Eth.glyph  _Euro.glyph  _F.glyph  _G.glyph  _H.glyph  _I.glyph  _Iacute.glyph  _Icircumflex.glyph  _Idieresis.glyph  _Igrave.glyph  _J.glyph  _K.glyph  _L.glyph  _Lslash.glyph  _M.glyph  _N.glyph  _Ntilde.glyph  _O.glyph  _O_E.glyph  _Oacute.glyph  _Ocircumflex.glyph  (+324 more)
PUBLIC/RECLUSE_UI/tokens/: colors.css  fonts.css  spacing.css
SCRIPTS/: build_pulsar.py  build_sine.py  build_synth.py  regenSource.py  serve.py  vendor-recluse-ui.sh
